@@ -13,6 +13,21 @@ namespace gui
 {
 	class IGUIEditBox;
 
+	//! Enumeration bitflag for when to validate the text typed into the spinbox
+	//! Default used by Irrlicht is: (EGUI_SBV_ENTER|EGUI_SBV_LOSE_FOCUS)
+	enum EGUI_SPINBOX_VALIDATION
+	{
+		//! Does not validate typed text, probably a bad idea setting this usually.
+		EGUI_SBV_NEVER  = 0,
+		//! Validate on each change. Was default up to Irrlicht 1.8
+		EGUI_SBV_CHANGE = 1,
+		//! Validate when enter was pressed
+		EGUI_SBV_ENTER = 2,
+		//! Validate when the editbox loses the focus
+		EGUI_SBV_LOSE_FOCUS = 4,
+	};
+
+
 	//! Single line edit box + spin buttons
 	/** \par This element can create the following events of type EGUI_EVENT_TYPE:
 	\li EGET_SPINBOX_CHANGED
@@ -59,6 +74,14 @@ namespace gui
 
 		//! get the current step size
 		virtual f32 getStepSize() const = 0;
+
+		//! Sets when the spinbox has to validate entered text.
+		/** \param validateOn Can be any combination of EGUI_SPINBOX_VALIDATION bit flags */
+		virtual void setValidateOn(u32 validateOn) = 0;
+
+		//! Gets when the spinbox has to validate entered text.
+		/** \return A combination of EGUI_SPINBOX_VALIDATION bit flags */
+		virtual u32 getValidateOn() const = 0;
 	};
 
 
